
cmake_minimum_required(VERSION 3.14)
project(tessera_benches LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)

# Optional NVTX (for Nsight Systems ranges)
option(ENABLE_NVTX "Enable NVTX ranges if headers are available" ON)
if (ENABLE_NVTX)
  find_path(NVTX_INCLUDE_DIR nvToolsExt.h PATHS /usr/local/cuda/include /opt/cuda/include /usr/include)
  if (NVTX_INCLUDE_DIR)
    add_compile_definitions(USE_NVTX=1)
    include_directories(${NVTX_INCLUDE_DIR})
    message(STATUS "NVTX enabled: ${NVTX_INCLUDE_DIR}")
  else()
    message(STATUS "NVTX not found, continuing without it.")
  endif()
endif()

add_executable(micro_mem_bandwidth micro/mem_bandwidth.cpp)
add_executable(micro_cache_latency micro/cache_latency.cpp)
add_executable(micro_gemm_f32 micro/gemm_f32.cpp)

if (MSVC)
  target_compile_options(micro_mem_bandwidth PRIVATE /O2)
  target_compile_options(micro_cache_latency PRIVATE /O2)
  target_compile_options(micro_gemm_f32 PRIVATE /O2)
else()
  target_compile_options(micro_mem_bandwidth PRIVATE -O3 -march=native)
  target_compile_options(micro_cache_latency PRIVATE -O3 -march=native)
  target_compile_options(micro_gemm_f32 PRIVATE -O3 -march=native)
endif()
