[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "tessera-diffusion-llm"
version     = "0.1.0"
description = "Three diffusion LM variants (MDLM, Continuous, Flow Matching) with shared Tessera-compiled transformer backbone"
readme      = "Diffusion_LLM.md"
license     = { text = "Apache-2.0" }
requires-python = ">=3.10"

keywords = [
    "diffusion", "language-model", "masked-diffusion", "flow-matching",
    "tessera", "mlir", "transformer",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.3",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
]
train = [
    "wandb>=0.17",
    "tensorboard>=2.14",
    "datasets>=2.18",
    "transformers>=4.40",
]
convert = [
    "transformers>=4.40",
    "safetensors>=0.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["tessera_diffusion_llm*"]

[tool.pytest.ini_options]
testpaths    = ["tests"]
addopts      = "-v --tb=short"

[tool.coverage.run]
source = ["tessera_diffusion_llm"]
omit   = ["tests/*"]
